[tool.poetry]
name = "amortization_calculator"
version = "0.0.0"
description = "Calculator for amortization according to Swedish amortization rules."
authors = ["Erik Thorsell <erik@thorsell.io>"]

[tool.poetry.dependencies]
python = "^3.10.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[tool.poetry.scripts]
project_cli = "amortization_calculator.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
